# rakund

./: .gitignore  .gitmodules  ARCHITECTURE.md  FRONTEND_STRUCTURE.md  README.md  default.nix  h.sh  index.html  package.json  sfz_piano_parser.py  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  libcache.rlib  libplayer.rlib  tauri.conf.json  test_migration.rs
src-tauri/data/: instrument.json  store.json  test.json
src-tauri/data/map/: salamander.json  splendid.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: filter.rs  player.rs
src-tauri/src/context/: mod.rs
src-tauri/src/core/: manager.rs  mod.rs  player.rs  sampler.rs  visualizer.rs
src-tauri/src/engine/: basis.rs  cache.rs  caching.rs  decoder.rs  extractor.rs  instrument.rs  loader.rs  mod.rs  player.rs  volume.rs
src-tauri/src/engine/parser/: flac.rs  mod.rs  wav.rs
src-tauri/src/engine/sound/: articulation.rs  chord.rs  dimension.rs  envelope.rs  filter.rs  mod.rs
src-tauri/src/events/: audio.rs  mod.rs  orchestrator.rs  sampler.rs
src-tauri/src/extension/: mod.rs
src-tauri/src/extension/challenge/: mod.rs
src-tauri/src/extension/instrument/: deserialize.rs  general.rs  layer.rs  mod.rs  response.rs  settings.rs
src-tauri/src/extra/: mod.rs
src-tauri/src/instrument/: mod.rs  salamander.rs  splendid.rs
src-tauri/src/parser/: flac.rs  mod.rs  wav.rs
src-tauri/src/setup/: audio.rs  config.rs  defaults.rs  init.rs  mod.rs  models.rs  sound.rs  state.rs  tweak.rs
src-tauri/src/storage/: basic.rs  handler.rs  items.rs  logic.rs  mod.rs
(+70 files in other folders)
