[package]
name = "rakund"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rakund_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
lazy_static = "1.4.0"

cpal = "0.17.1"
fundsp = "0.23.0"

symphonia = { version = "0.5.5", features = ["flac", "wav"] }
midly = "0.5.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dirs-next = "2.0.0"

regex = "1.12.3"
uuid = { version = "1.21.0", features = ["serde", "v4"] }

thiserror = "2.0.18"
futures-util = "0.3.32"
